oke-function/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /rota1
        pathType: Prefix
        backend:
          service:
            name: apigw
            port:
              number: 5000
      - path: /rota2
        pathType: Prefix
        backend:
          service:
            name: apigw
            port:
              number: 5000
